manifests/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: calico-demo-gw
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  gatewayClassName: tigera-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      protocol: HTTPS
      port: 443
      hostname: secure-demo.local
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: example-https
